Fixed z-index for text-editor

--- a/client-site-web-builder/src/components/formComponents/contentElement/simplemde.css
+++ b/client-site-web-builder/src/components/formComponents/contentElement/simplemde.css
@@ -1,5 +1,6 @@
 .CodeMirror,
 .CodeMirror-scroll {
+  z-index: 0;
   max-height: 40vh;
 }
 .CodeMirror-fullscreen.CodeMirror {
